<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393D3F">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:background="#CECBC9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/go_main"
        android:layout_width="81dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="260dp"
        android:background="#CDCAC8"
        android:onClick="startMain"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/arrow_1" />

    <EditText
        android:id="@+id/name_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:hint="Введите имя"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/uri_in" />

    <EditText
        android:id="@+id/city_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdate_in" />

    <EditText
        android:id="@+id/crime_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:hint="Введите преступление"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_in" />

    <EditText
        android:id="@+id/signs_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:hint="Введите приметы"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crime_in" />

    <EditText
        android:id="@+id/birthdate_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:hint="Введите дату рождения"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_in" />


    <ImageButton
        android:id="@+id/uri_in"
        android:layout_width="138dp"
        android:layout_height="162dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="68dp"
        android:background="#CECBC9"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/photo" />

    <ImageButton
        android:id="@+id/ok_in"
        android:layout_width="329dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/signs_in"
        app:srcCompat="@drawable/frame_2" />

    <ImageView
        android:id="@+id/uspeh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/uspeh" />

    <ImageView
        android:id="@+id/neuspeh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/neuspeh" />

    <TextView
        android:id="@+id/uspeh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/oswald"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/uspeh" />

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:layout_marginTop="412dp"
        android:fontFamily="@font/oswald"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>