...
        android:onClick="startMain"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/arrow_1" />

    <EditText
        android:id="@+id/f_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#000000"
        android:elevation="1dp"
...
        android:hint="Введите имя"
        android:inputType="textPersonName"
        android:textColor="#171819"
        android:textColorHighlight="#171819"
        android:textColorHint="#161718"
        android:textColorLink="#161718"
        app:layout_constraintEnd_toStartOf="@+id/f_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/f_button"
        android:layout_width="80dp"
        android:layout_height="63dp"
...
